This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
9/26/19: Turned off Low Dose checkbox when in low dose, realigning to non-low
dose map, and not restoring state after the realign to item (In 3.7).

9/24/19: Added property to use condenser lens normalization instead of passing
through View intensity/spot size when changing low dose area.

9/24/19: SEM_3-7-9
9/24/19: Fixed copying of low dose areas to handle shift and defocus offsets
properly for View and Search, and to not copy additional beam shift/tilt to
Record (In 3.7).

9/24/19: Fixed area measurement that make "Add grid like last" to fill largest
instead of smallest polygon/map that point is in (in 3.7).

9/23/19: 3-8-0beta5
9/18/17: Enabled saving or aligning frames in the SEMCCD plugin for OneView
and Rio cameras, just as for K2/K3, and add general framework from
saving/aligning frames in SerialEM for other cameras.

9/18/17: Added DoLoop command with index variable and start, end, and
increment values.

9/18/17: Beam shift in scope control panel now does diffraction shift in
diffraction mode.

9/18/17: Added script commands for getting a vacuum gauge value and
controlling stage piezos on JEOLs.

9/10/19: Enabled screen current output on Hitachi (In 3.7).

9/5/19: Fixed setting of probe mode for first area entered after turning on
low dose mode while in LM.

9/5/19: Mag spinner in scope control panel now controls camera length in
diffraction mode - may require NumberOfCameraLengths property.

8/27/19: Fixed adjustment of mouse stage shift for tilt on Hitachi (In 3.7).

8/27/19: Fixed "Add Stage Pos" in Navigator to exclude low dose area shift and
offset (In 3.7).

8/26/19: Added script command to center on a point marked on a higher mag map
that can be aligned to in two rounds with Realign to Item.  Also added